feat: implementation of GET /dishes endpoints
